# portfolio

./: .env.example  .gitignore  README.md  TP_SESSIONS.md  docker-compose.yml  justfile  pyproject.toml
.github/workflows/: classroom.yml
backup/: compose.yml
datasets/: cities.csv  reviews.jsonl  scores.csv
docs/: DOCKER_DB.md
scripts/: strip_solutions.py
slides/: cloud-db-setup.md  tech-overview.md
tests/: conftest.py  test_cities.py  test_health.py  test_reco.py  test_reviews.py  test_seed_integration.py
tests/unit/: conftest.py  test_city_service.py  test_db_mongo.py  test_db_neo4j.py  test_db_postgres.py  test_mongo_repo.py  test_neo4j_repo.py  test_postgres_repo.py  test_reco_service.py  test_review_service.py  test_seed.py  test_seed_methods.py  test_tp1_postgres_repo.py  test_tp2_city_service.py  test_tp3_mongo_repo.py  test_tp3_review_service.py  test_tp4_neo4j_repo.py  test_tp4_reco_service.py
